megacorporation flex box

--- a/src/new111.html
+++ b/src/new111.html
@@ -12,11 +12,12 @@
 
 <body>
 
-    <div class="col-12 col-s-12" id="title">
+    <div id="title">
         <h1><a href="new111.html">Megacorporation</a></h1>
     </div>   
 
-    <div class="col-10 col-s-7" id="main">
+<div class="flex">
+    <div class="main" id="main">
         <h2>Mega important</h2>
         <p>
             <img class="picture" src="https://picsum.photos/200/200" alt="Important picture" />
@@ -43,8 +44,8 @@
         </p>
     </div>
 
-
-    <div class="col-2 col-s-5" id="sections">
+<div class="side">
+    <div id="sections">
         <h2>Title</h2>
         <ul>
             <li><a href="item1.html">Item 1</a></li>
@@ -54,12 +55,12 @@
         </ul>
     </div>
 
-    <div class="col-3 col-s-5" id="user">
+    <div id="user">
         <p>User: Uladzislau Skrashchuk</p>
         <p><a href="#">Logout</a></p>
     </div>
 
-    <div class="col-4 col-s-5" id="news">
+    <div id="news">
         <h2>News</h2>
 
         <h3>10.04.2020</h3>
@@ -77,17 +78,21 @@
         <h3>15.05.2020</h3>
         <p>Eu consectetur est duis. <a href="#">Details</a></p>
     </div>
+</div>
 
-    <div class="col-12 col-s-12" id="meta">
-        <p>
-            Elit deserunt qui est sint eu eiusmod voluptate ad occaecat mollit ad
-            incididunt exercitation.
-        </p>
-        <p>
-            Elit deserunt qui est sint eu eiusmod voluptate ad occaecat mollit ad
-            incididunt exercitation.
-        </p>
-    </div>
+</div>
+
+<div id="meta">
+    <p>
+        Elit deserunt qui est sint eu eiusmod voluptate ad occaecat mollit ad
+        incididunt exercitation.
+    </p>
+    <p>
+        Elit deserunt qui est sint eu eiusmod voluptate ad occaecat mollit ad
+        incididunt exercitation.
+    </p>
+</div>
+
 </body>
 
 </html>
